# autograd

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: val.hpp
src/: val.cc
